@@ -1,5 +1,8 @@
 2007-10-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
+	* tools/man2html2.tcl (macro): Added support for converting the new
+	macros into HTML.
+
 	* doc/man.macros (QW,PQ,QR,MT): New macros that hide the ugly mess
 	needed to get proper GOOBE quoting in the manual pages.
 	* doc/*.n, doc/*.3, doc/*.1: Lots of changes to take advantage of the
